--- a/Dermstore/login.html
+++ b/Dermstore/login.html
@@ -66,10 +66,10 @@
             <form action="">
                 <h2>Existing Customers</h2>
                 <label for="email"> <b>Email address</b></label><br>
-                <input type="email" ><br>
+                <input id="email" type="email" ><br>
 
                 <label for="password"> <b>Password</b></label><br>
-                <input type="password"><br>
+                <input id="password" type="password"><br>
 
                 <p>FORGOTTEN YOUR PASSWORD?</p>
 
