--- a/Dermstore/signup.html
+++ b/Dermstore/signup.html
@@ -5,47 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up page</title>
+    <link rel="stylesheet" href="./styles/signup.css">
   
-    <style>
-       
-        body{
-            background-color: rgb(222, 222, 235);
-        }
-        #navbar {
-            /* width: 100%; */
-            height: auto;
-            border: 0px solid red; 
-           padding: 10px 20px;
-           background-color: white;
-          
-         }
-        #container{
-            width: 50%;
-            height: auto;
-            margin: auto;
-            margin-top: 30px;
-            border: 0px solid red;
-            background-color: white;
-            padding: 20px;
-        }
-        #container > form > div{
-           width: 90%;
-           height: auto;
-           border: px solid blue;
-           margin: auto;
-           margin-top: 30px;
-        }
-        #container > form > div input{
-            width: 100%;
-            height: 40px;
-        }
-        #container > form > div button{
-            width: 100%;
-            height: 40px;
-            background-color: black;
-            color: white;
-        }
-    </style>
 </head>
 <body>
     <div id="navbar">
@@ -85,48 +46,5 @@
       </form>
    </div>
 </body>
+<script src="scripts/signup.js"></script>
 </html>
-<script>
-
- let form=document.querySelector('form')
- form.addEventListener("submit", signUpData );
-
-function signUpData(event){
-     event.preventDefault();
-
-     let Name= form.name.value;
-     let Email=  form.email.value ;
-     let Confirm_Email= form.confirm_email.value ;
-     let Pass= form.password.value ;
-     let Confirm_Pass= form.confirm_password.value ;
-     let Phone= form.number.value ;
-
-     if(Name=="" || Email=="" || Confirm_Email =="" ||  Pass =="" ||  Confirm_Pass=="" ||   Phone=="" ){
-        alert("fill the form completely")
-     }
-     else if(Email !==Confirm_Email ) {
-        alert(" email and confirm email does not match ")
-     }
-     else if(Pass !==Confirm_Pass){
-          alert ("password and confirm password does not match")
-     }
-     else{
-
-        let obj={
-            name: Name,
-            email: Email ,
-            confirm_email: Confirm_Email,
-            password: Pass,
-            confirm_password: Confirm_Pass,
-            number: Phone,
-        };
-
-         let SignUp_data_array=  JSON.parse(localStorage.getItem("signup_data"))|| []
-         SignUp_data_array.push(obj)
-        localStorage.setItem("signup_data", JSON.stringify(SignUp_data_array))
-        console.log(SignUp_data_array)
-
-        alert("signing up is successful ")
-     }
-}
-</script>
